--- a/templates/modals/transactions/add.tmpl
+++ b/templates/modals/transactions/add.tmpl
@@ -5,7 +5,7 @@
 		</div>
 
 		<form 
-			class="flex flex-col gap-2 w-full text-night placeholder-night-600  m-0" 
+			class="flex flex-col gap-2 w-full text-night placeholder-night-600 m-0" 
 			hx-post="/comp/modal/transaction/add"
 			hx-swap="outerHTML"
 			hx-target="#transactions"
@@ -22,10 +22,23 @@
 				<input id="amount" type="number" step="0.01" placeholder="Amount" name="amount"
 					class="px-2 py-1 rounded-md outline-black outline-1 w-full border-night border-2"/>
 			</div>
+				
+			<div class="w-full flex justify-between gap-2">
+				<button type="submit" class="px-4 py-2 rounded-md text-night bg-primary border-2 border-night transition-colors hover:bg-night hover:text-primary flex-grow">
+					Add
+				</button>
 
-			<button type="submit" class="px-4 py-2 hover:bg-night rounded-md hover:text-primary text-night bg-primary border-2 border-night transition-colors">
-				Add
-			</button>
+				<button 
+					hx-get="/comp/modal/empty/add-product-modal"
+					hx-trigger="click"
+					hx-target="#add-product-modal"
+					hw-swap="outerHTML"
+					type="button"
+					class="px-4 py-2 rounded-md text-night bg-primary border-2 border-poppy transition-colors hover:bg-poppy hover:text-primary flex-grow"
+				>
+					Cancel
+				</button>
+			</div>
 		</form>
 	</div>
 </div>
