--- a/templates/transaction_header.tmpl
+++ b/templates/transaction_header.tmpl
@@ -15,7 +15,7 @@
 	<div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
 		<button 
 			hx-get="/comp/modal/transaction/add"
-			hx-trigger="load"
+			hx-trigger="click"
 			hx-target="#add-product-modal"
 			hx-swap="outerHTML"
 			
