--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -2,10 +2,10 @@
 	<head>
 		<link rel="stylesheet" href="assets/app.css">
 		<script src="https://unpkg.com/htmx.org@1.9.12/dist/htmx.js" integrity="sha384-qbtR4rS9RrUMECUWDWM2+YGgN3U4V4ZncZ0BvUcg9FGct0jqXz3PUdVpU1p0yrXS" crossorigin="anonymous"></script>
-		
+		<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/multi-swap.js"></script>
 	</head>
 
-	<body onload="openWS">
+	<body onload="openWS" hx-ext="multi-swap">
 		<main class="flex w-full">
 			{{ template "sidebar" .Sidebar }}
 	
