--- a/templates/transactions.tmpl
+++ b/templates/transactions.tmpl
@@ -1,4 +1,4 @@
-<section class="px-4 py-4 mx-auto w-full h-full flex flex-col">
+<section class="px-4 py-4 mx-auto w-full h-full flex flex-col" id="transactions">
     <div class="flex items-center gap-x-3">
         <h2 class="text-lg font-medium text-gray-800 dark:text-white">{{ .Title }}</h2>
 
