--- a/templates/table.tmpl
+++ b/templates/table.tmpl
@@ -22,10 +22,14 @@
 					{{ end }}
 
 					<td class="px-4 py-3 flex items-center justify-end">
-						<button id="apple-imac-27-dropdown-button" data-dropdown-toggle="apple-imac-27-dropdown" class="inline-flex items-center p-0.5 text-sm font-medium text-center rounded-lg text-night-800 hover:text-night" type="button">
-							<svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-								<path d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z" />
-							</svg>
+						<button 
+							class="inline-flex items-center py-0.5 transition-colors px-2 text-sm font-medium text-center rounded-lg text-poppy border-poppy border bg-secondary hover:bg-poppy hover:text-primary"
+							type="button"
+							hx-delete="{{ .DeleteUrl }}"
+							hx-target="closest tr"
+							hx-trigger="click"
+						>
+							Delete
 						</button>
 					</td>
 				</tr>
