static transactions list

--- a/templates/breadcrumbs.tmpl
+++ b/templates/breadcrumbs.tmpl
@@ -1,4 +1,4 @@
-<div class="bg-gray-200 dark:bg-gray-800">
+<div class="bg-gray-200 dark:bg-gray-800 w-full">
 	<div class="container flex items-center px-0 py-4 mx-6 overflow-x-auto whitespace-nowrap">
 		<a href="#" class="text-gray-600 dark:text-gray-200">
 			<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
