--- a/templates/sidebar.tmpl
+++ b/templates/sidebar.tmpl
@@ -47,7 +47,7 @@
 				{{ else }}
 				<button class="flex items-center w-full px-5 py-2 transition-colors duration-200 dark:hover:bg-gray-800 focus:outline-none hover:bg-gray-100">
 				{{ end }}
-					<img class="object-cover w-8 h-8 rounded-full" src="{{ .Img }}" alt="">
+					<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
 				
 					<div class="text-left rtl:text-right flex-grow pl-2">
 						<h1 class="text-sm font-medium text-gray-700 capitalize dark:text-white">{{ .Title }}</h1>
