--- a/templates/breadcrumbs.tmpl
+++ b/templates/breadcrumbs.tmpl
@@ -1,3 +1,4 @@
+{{ block "breadcrumbs" . }}
 <div class="bg-gray-200 dark:bg-gray-800 w-full">
 	<div class="container flex items-center px-0 py-4 mx-6 overflow-x-auto whitespace-nowrap">
 		<a href="#" class="text-gray-600 dark:text-gray-200">
@@ -21,3 +22,4 @@
 		{{ end }}
 	</div>
 </div>
+{{ end }}
