--- a/templates/sidebar.tmpl
+++ b/templates/sidebar.tmpl
@@ -1,7 +1,7 @@
 <aside class="flex">
     <div class="flex flex-col items-center w-16 h-screen py-8 space-y-8 bg-white dark:bg-gray-900 dark:border-gray-700">
         <a href="#">
-            <img class="w-auto h-6" src="https://merakiui.com/images/logo.svg" alt="">
+			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
         </a>
 
         <a href="#" class="p-1.5 text-gray-500 focus:outline-nones transition-colors duration-200 rounded-lg dark:text-gray-400 dark:hover:bg-gray-800 hover:bg-gray-100">
@@ -39,9 +39,9 @@
     
     <div class="h-screen py-8 overflow-y-auto bg-white border-l border-r sm:w-64 w-60 dark:bg-gray-900 dark:border-gray-700">
         <h2 class="px-5 text-lg font-medium text-gray-800 dark:text-white">{{ .Title }}</h2>
-
+        
         <div class="mt-8">
-			{{ range $i, $v := .List }}
+			{{ range $i, $v := .Menus }}
 				{{ if eq $i $.Selected }}
 				<button class="flex items-center w-full px-5 py-2 transition-colors duration-200 dark:bg-gray-800 focus:outline-none bg-gray-100">
 				{{ else }}
