--- a/templates/transactions.tmpl
+++ b/templates/transactions.tmpl
@@ -9,7 +9,7 @@
 		<div class="bg-white flex flex-col h-full dark:bg-gray-800 relative shadow-md sm:rounded-lg overflow-hidden">
 			{{ template "table_header" . }}
 
-			{{ template "table" . }}
+			{{ template "table" .Table }}
 	
 			{{ template "pagination" . }}
 			
