--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -5,14 +5,14 @@
 		<script src="/assets/multi-swap.js" ></script>
 	</head>
 
-	<body onload="openWS" hx-ext="multi-swap">
+	<body onload="openWS" hx-ext="multi-swap" class="bg-primary text-night">
 		<main class="flex w-full">
 			<div hx-get="/comp/sidebar" hx-trigger="load">
-				<div class="htmx-indicator text-white w-full text-center my-4">Loading sidebar...</div>
+				<div class="htmx-indicator text-night w-full text-center my-4">Loading sidebar...</div>
 			</div>
 	
-			<div class="bg-gray-900 flex-grow w-full" hx-get="/comp/transactions" hx-trigger="load">
-				<div class="htmx-indicator text-white w-full text-center my-4">Loading transactions...</div>
+			<div class="bg-primary flex-grow w-full" hx-get="/comp/transactions" hx-trigger="load">
+				<div class="htmx-indicator text-night w-full text-center my-4">Loading transactions...</div>
 			</div>
 
 		</main>
