--- a/templates/modals/transactions/add.tmpl
+++ b/templates/modals/transactions/add.tmpl
@@ -1,25 +1,29 @@
 <div id="add-product-modal" class="fixed top-0 left-0 w-screen h-screen bg-black/50 m-0 flex justify-center items-center ">
-	<div class="w-1/3 min-h-12 bg-gray-900 text-white p-8 rounded-lg">
+	<div class="w-1/3 bg-primary p-8 rounded-lg">
+		<div class="w-full text-center mb-4 text-lg font-medium">
+			Add Transaction
+		</div>
+
 		<form 
-			class="flex flex-col gap-2 w-full text-gray-400" 
+			class="flex flex-col gap-2 w-full text-night placeholder-night-600  m-0" 
 			hx-post="/comp/modal/transaction/add"
 			hx-swap="outerHTML"
 			hx-target="#transactions"
 		>
 			<div class="w-full">
 				<input id="name" type="text" placeholder="Name" name="name"
-					class="px-2 py-1 rounded-md outline-black outline-1 w-full" />
+					class="px-2 py-1 rounded-md outline-black outline-1 w-full border-night border-2" />
 			</div>
 			<div class="w-full">
 				<input id="date" type="date" placeholder="Date" name="date"
-					class="px-2 py-1 rounded-md outline-black outline-1 w-full" />
+					class="px-2 py-1 rounded-md outline-black outline-1 w-full border-night border-2" />
 			</div>
 			<div class="w-full">
 				<input id="amount" type="number" step="0.01" placeholder="Amount" name="amount"
-					class="px-2 py-1 rounded-md outline-black outline-1 w-full"/>
+					class="px-2 py-1 rounded-md outline-black outline-1 w-full border-night border-2"/>
 			</div>
 
-			<button type="submit" class="px-4 py-2 bg-green-800 rounded-md text-white">
+			<button type="submit" class="px-4 py-2 hover:bg-night rounded-md hover:text-primary text-night bg-primary border-2 border-night transition-colors">
 				Add
 			</button>
 		</form>
