--- a/templates/sidebar.tmpl
+++ b/templates/sidebar.tmpl
@@ -1,16 +1,16 @@
 <aside class="flex" id="sidebar">
-    <div class="flex flex-col items-center w-16 h-screen py-8 space-y-8 bg-white dark:bg-gray-900 dark:border-gray-700">
+    <div class="flex flex-col items-center w-16 h-screen py-8 space-y-8 bg-primary text-night">
         <a href="#">
 			{{ IncludeIcon "dollar.svg" }}
         </a>
 
 		{{ range $i, $p := .Pages }}
 			{{ if eq $i $.Selected }}
-			<a href="#" class="p-1.5 text-gray-500 focus:outline-nones transition-colors duration-200 rounded-lg dark:text-gray-400 dark:bg-gray-800 bg-gray-100">
+			<a href="#" class="p-1.5 focus:outline-nones transition-colors duration-200 rounded-lg bg-secondary">
 				{{ IncludeIcon $p.Icon }}
 			</a>
 			{{ else }}
-			<a href="#" class="p-1.5 text-gray-500 focus:outline-nones transition-colors duration-200 rounded-lg dark:text-gray-400 dark:hover:bg-gray-800 hover:bg-gray-100">
+			<a href="#" class="p-1.5 focus:outline-nones transition-colors duration-200 rounded-lg hover:bg-secondary">
 				{{ IncludeIcon $p.Icon }}
 			</a>
 			{{ end }}
@@ -18,19 +18,19 @@
 
     </div>
     
-    <div class="h-screen py-8 overflow-y-auto bg-white border-l border-r sm:w-64 w-60 dark:bg-gray-900 dark:border-gray-700">
-        <h2 class="px-5 text-lg font-medium text-gray-800 dark:text-white">{{ (index .Pages .Selected).Name }}</h2>
+    <div class="h-screen py-8 overflow-y-auto border-l border-r border-secondary sm:w-64 w-60 bg-seasalt">
+        <h2 class="px-5 text-lg font-medium text-night">{{ (index .Pages .Selected).Name }}</h2>
         
         <div class="mt-8">
 			{{ range $i, $v := .Menus }}
 				{{ if eq $i $.SelectedMenu }}
 				<button 
 					id="menu-{{$i}}"
-					class="flex items-center w-full px-5 py-2 transition-colors duration-200 dark:bg-gray-800 focus:outline-none bg-gray-100">
+					class="flex items-center w-full px-5 py-2 transition-colors duration-200 bg-secondary">
 				{{ else }}
 				<button 
 					id="menu-{{$i}}"
-					class="flex items-center w-full px-5 py-2 transition-colors duration-200 dark:hover:bg-gray-800 focus:outline-none hover:bg-gray-100"
+					class="flex items-center w-full px-5 py-2 transition-colors duration-200 hover:bg-secondary"
 					hx-post="/comp/sidebar/menu/select/{{ $i }}"
 					hx-trigger="click"
 					hx-target="#sidebar"
@@ -38,11 +38,11 @@
 				>
 
 				{{ end }}
-					<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
+					<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
 				
 					<div class="text-left rtl:text-right flex-grow pl-2">
-						<h1 class="text-sm font-medium text-gray-700 capitalize dark:text-white">{{ .Title }}</h1>
-						<p class="text-xs text-gray-500 dark:text-gray-400">{{ .Subtitle }}</p>
+						<h1 class="text-sm font-medium capitalize">{{ .Title }}</h1>
+						<p class="text-xs">{{ .Subtitle }}</p>
 					</div>
 				</button>
 			{{ end }}
