--- a/templates/table.tmpl
+++ b/templates/table.tmpl
@@ -1,6 +1,6 @@
 <div class="overflow-x-auto flex-grow">
-	<table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-		<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+	<table class="w-full text-sm text-left ">
+		<thead class="text-xs uppercase bg-primary">
 			<tr>
 				{{ range .Headers }}
 					<th scope="col" class="px-4 py-3">{{ .Name }}</th>
@@ -12,7 +12,7 @@
 		</thead>
 		<tbody>
 			{{ range .Rows }}
-				<tr class="border-b dark:border-gray-700">
+				<tr class="border-b border-b-night">
 					{{ range .Data }}
 						{{ if .Bold }}
 							<td class="px-4 py-3 font-medium">{{ .Value }}</td>
@@ -22,7 +22,7 @@
 					{{ end }}
 
 					<td class="px-4 py-3 flex items-center justify-end">
-						<button id="apple-imac-27-dropdown-button" data-dropdown-toggle="apple-imac-27-dropdown" class="inline-flex items-center p-0.5 text-sm font-medium text-center text-gray-500 hover:text-gray-800 rounded-lg focus:outline-none dark:text-gray-400 dark:hover:text-gray-100" type="button">
+						<button id="apple-imac-27-dropdown-button" data-dropdown-toggle="apple-imac-27-dropdown" class="inline-flex items-center p-0.5 text-sm font-medium text-center rounded-lg text-night-800 hover:text-night" type="button">
 							<svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
 								<path d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z" />
 							</svg>
