--- a/templates/transaction_header.tmpl
+++ b/templates/transaction_header.tmpl
@@ -1,18 +1,19 @@
-<div class="flex flex-col md:flex-row items-center justify-between p-4">
+<div class="flex flex-col md:flex-row items-center justify-between p-4 text-night">
 
 	<div class="w-full md:w-1/2">
 		<form class="flex items-center m-0">
+
 			<label for="simple-search" class="sr-only">Search</label>
-			<div class="relative w-full">
-				<div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+			<div class="relative flex-grow">
+				<div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none text-night">
 					{{ IncludeIcon "search.svg" }}
 				</div>
-				<input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Search" required="">
+				<input type="text" id="simple-search" class="border bg-primary border-secondary text-night placeholder-night text-sm rounded-lg block w-full pl-10 p-2 outline-none" placeholder="Search" required="">
 			</div>
 		</form>
 	</div>
 
-	<div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
+	<div class="flex-grow flex justify-end">
 		<button 
 			hx-get="/comp/modal/transaction/add"
 			hx-trigger="click"
@@ -20,29 +21,17 @@
 			hx-swap="outerHTML"
 			
 			type="button"
-			class="flex items-center justify-center text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">
+			class="flex items-center gap-1 font-medium rounded-lg text-sm px-4 py-2">
 
 			{{ IncludeIcon "plus.svg" }}
 
-			Add product
+			<span>
+			Add transaction
+			</span>
 		</button>
-
-		<div class="flex items-center space-x-3 w-full md:w-auto">
-			<button id="actionsDropdownButton" data-dropdown-toggle="actionsDropdown" class="w-full md:w-auto flex items-center justify-center py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700" type="button">
-				{{ IncludeIcon "down_arrow.svg" }}
-				Actions
-			</button>
-
-			<button id="filterDropdownButton" data-dropdown-toggle="filterDropdown" class="w-full md:w-auto flex items-center justify-center py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700" type="button">
-				{{ IncludeIcon "filter.svg" }}
-				Filter
-				{{ IncludeIcon "down_arrow.svg" }}
-			</button>
-
-		</div>
 	</div>
 
-	<div id="add-product-modal" class="absolute">
+	<div id="add-product-modal" class="absolute top-0 left-0">
 	</div>
 
 </div>
