--- a/templates/sidebar.tmpl
+++ b/templates/sidebar.tmpl
@@ -4,10 +4,16 @@
 			{{ IncludeIcon "dollar.svg" }}
         </a>
 
-		{{ range .Pages }}
-			<a href="#" class="p-1.5 text-gray-500 focus:outline-nones transition-colors duration-200 rounded-lg dark:text-gray-400 dark:hover:bg-gray-800 hover:bg-gray-100">
-				{{ IncludeIcon .Icon }}
+		{{ range $i, $p := .Pages }}
+			{{ if eq $i $.Selected }}
+			<a href="#" class="p-1.5 text-gray-500 focus:outline-nones transition-colors duration-200 rounded-lg dark:text-gray-400 dark:bg-gray-800 bg-gray-100">
+				{{ IncludeIcon $p.Icon }}
 			</a>
+			{{ else }}
+			<a href="#" class="p-1.5 text-gray-500 focus:outline-nones transition-colors duration-200 rounded-lg dark:text-gray-400 dark:hover:bg-gray-800 hover:bg-gray-100">
+				{{ IncludeIcon $p.Icon }}
+			</a>
+			{{ end }}
 		{{ end }}
 
     </div>
@@ -27,7 +33,8 @@
 					class="flex items-center w-full px-5 py-2 transition-colors duration-200 dark:hover:bg-gray-800 focus:outline-none hover:bg-gray-100"
 					hx-post="/comp/sidebar/menu/select/{{ $i }}"
 					hx-trigger="click"
-					hx-swap="multi:#sidebar,#transactions"
+					hx-target="#sidebar"
+					hx-swap="outerHTML"
 				>
 
 				{{ end }}
