--- a/templates/transactions.tmpl
+++ b/templates/transactions.tmpl
@@ -7,7 +7,7 @@
 
     <div class="mt-4 flex-grow">
 		<div class="bg-white flex flex-col h-full dark:bg-gray-800 relative shadow-md sm:rounded-lg overflow-hidden">
-			{{ template "table_header" . }}
+			{{ template "transaction_header" . }}
 
 			{{ template "table" .Table }}
 	
