--- a/templates/table.tmpl
+++ b/templates/table.tmpl
@@ -12,11 +12,13 @@
 		</thead>
 		<tbody>
 			<tr class="border-b dark:border-gray-700">
-				{{ range .Items }}
-					{{ if .Bold }}
-						<td class="px-4 py-3 font-medium">{{ .Value }}</td>
-					{{ else }}
-						<td class="px-4 py-3">{{ .Value }}</td>
+				{{ range .Rows }}
+					{{ range .Data }}
+						{{ if .Bold }}
+							<td class="px-4 py-3 font-medium">{{ .Value }}</td>
+						{{ else }}
+							<td class="px-4 py-3">{{ .Value }}</td>
+						{{ end }}
 					{{ end }}
 				{{ end }}
 
